@@ -111,7 +111,7 @@ class MLItemDocumentGenerationHelperView(ItemDocumentGenerationHelperView):
         collegeItem = self.context.adapted().getItemCollege()
         if collegeItem and collegeItem.hasMeeting():
             tool = api.portal.get_tool('portal_plonemeeting')
-            date = tool.formatMeetingDate(collegeItem.getMeeting(), markAdoptsNextCouncilAgenda=False)
+            date = tool.formatMeetingDate(collegeItem.getMeeting())
             sentence = u"Sur proposition du Collège Communal, en sa séance du %s, et " \
                 u"après examen du dossier par la Commission compétente ;" % date
         else:
