@@ -40,3 +40,5 @@ Products.MeetingLiege Changelog
 - When an item is 'returned', keep original creator for duplicated items
 - Do not rely on Products.MeetingCommunes for the testing part as we do not
   override every PM tests in MC, we just heritate from PM test file
+- Get rid of ToolPloneMeeting.formatMeetingDate override that displayed a '*' for meetings where
+  adoptsNextCouncilAgenda=True, we use imio.prettylink _leadingIcons now
